frontend/test/should_fail/computations_decl_use_returns_arguments_mismatch_008.grg
using model_init;

proc() : (boolean)
{
	return;
}
